--- a/GeoQuiz/languages/en.json
+++ b/GeoQuiz/languages/en.json
@@ -1,7 +1,66 @@
 {
     "mainPage.signIn": "Sign In",
-    "mainPage.signOut": "Sign Out",
+    "mainPage.signUp": "Sign Up",
+    "mainPage.logIn": "LogIn",
+    "mainPage.navScore": "Score:",
+    "mainPage.welcome": "Welcome, ",
     "mainPage.language": "Language",
     "mainPage.language.romanian": "Romanian",
-    "mainPage.language.english": "Englishh"
+    "mainPage.language.english": "English",
+    "mainPage.h1.banner":"Learn while having FUN!",
+    "mainPage.home":"Home",
+    "mainPage.play": "Play",
+    "mainPage.difficulty":"Choose difficulty:",
+    "mainPage.easy": "Easy",
+    "mainPage.medium": "Medium",
+    "mainPage.hard": "Hard",
+    "mainPage.discover":"Discover GeoQuiz!",
+    "mainPage.discover.p":"Welcome to our geography gaming platform! Choose a game mode and get ready to explore the world!",
+    "mainPage.presentation.easy":"Easy",
+    "mainPage.presentation.medium":"Medium",
+    "mainPage.presentation.Hard":"Hard",
+    "mainPage.presentation.easy.p":"Explore the world in a relaxed manner, without too many challenges.",
+    "mainPage.presentation.medium.p":"Test your geography knowledge in a more challenging environment.",
+    "mainPage.presentation.hard.p":"Dare to explore the world in a challenging and captivating way.",
+    "signUp.signIn": "Sign In",
+    "signIn.signUp": "Sign Up",
+    "signUp.signOut": "Sign Out",
+    "signUp.logIn": "LogIn",
+    "signUp.navScore": "Score:",
+    "signUp.welcome": "Welcome, ",
+    "signUp.language": "Language",
+    "signUp.language.romanian": "Romanian",
+    "signUp.language.english": "English",
+    "signUp.home":"Home",
+    "signUp.title": "Sign Up",
+    "signUp.username": "Username:",
+    "signUp.email": "Email:",
+    "signUp.password": "Password",
+    "signUp.button":"Sign Up",
+    "signUp.account":"Already have an account?",
+    "signUp.account.logIn":"LogIn",
+    "signIn.signIn": "Sign In",
+    "signIn.signOut": "Sign Out",
+    "signIn.logIn": "LogIn",
+    "signIn.navScore": "Score:",
+    "signIn.welcome": "Welcome, ",
+    "signIn.language": "Language",
+    "signIn.language.romanian": "Romanian",
+    "signIn.language.english": "English",
+    "signIn.home":"Home",
+    "signIn.title": "Sign In",
+    "signIn.username": "Username:",
+    "signIn.password": "Password",
+    "signIn.button":"LogIn",
+    "signIn.account":"Don't have an account?",
+    "signIn.account.signUp":"Sign Up",
+    "quizcard.signIn": "Sign In",
+    "quizcard.signOut": "Sign Out",
+    "quizcard.logIn": "LogIn",
+    "quizcard.navScore": "Score:",
+    "quizcard.welcome": "Welcome, ",
+    "quizcard.language": "Language",
+    "quizcard.language.romanian": "Romanian",
+    "quizcard.language.english": "English",
+    "quizcard.home": "Home"
 }
