--- a/GeoQuiz/languages/ro.json
+++ b/GeoQuiz/languages/ro.json
@@ -1,7 +1,68 @@
-{
-    "mainPage.signIn": "Inregistrare",
-    "mainPage.signOut": "Delogare",
-    "mainPage.language": "Selecteaza Limba",
-    "mainPage.language.romanian": "Romana",
-    "mainPage.language.english": "Engleza"
-}
+ {
+        "mainPage.logout":"Delogare",
+        "mainPage.signIn": "Logare",
+        "mainPage.signUp": "Inregistrare",
+        "mainPage.logIn": "Logare",
+        "mainPage.navScore": "Scor:",
+        "mainPage.welcome": "Salut, ",
+        "mainPage.language": "Limba",
+        "mainPage.language.romanian": "Romana",
+        "mainPage.language.english": "Engleza",
+        "mainPage.h1.banner":"Invata distrandu-te!",
+        "mainPage.home":"Acasa",
+        "mainPage.play": "Joaca",
+        "mainPage.difficulty":"Alege dificultatea:",
+        "mainPage.easy": "Usor",
+        "mainPage.medium": "Mediu",
+        "mainPage.hard": "Greu",
+        "mainPage.discover":"Descopera GeoQuiz!",
+        "mainPage.discover.p":"Bun venit pe platforma noastra de jocuri! Alege modul de joc si pregateste-te sa explorezi lumea!",
+        "mainPage.presentation.easy":"Usor",
+        "mainPage.presentation.medium":"Mediu",
+        "mainPage.presentation.hard":"Greu",
+        "mainPage.presentation.easy.p":"Exploreaza lumea intr-o maniera relaxanta, fara prea multe provovcari",
+        "mainPage.presentation.medium.p":"Testeaza-ti cunostintele despre geografie intr-un mediu mai provocator.",
+        "mainPage.presentation.hard.p":"Indrazneste sa explorezi lumea intr-un mod mai provocator si captivant.",
+        "mainPage.phone": "Telefon: +1234567890",
+        "signUp.signIn": "Logare",
+        "signUp.signOut": "Inregistrare",
+        "signUp.logIn": "Logare",
+        "signUp.navScore": "Scor:",
+        "signUp.welcome": "Salut, ",
+        "signUp.language": "Limba",
+        "signUp.language.romanian": "Romana",
+        "signUp.language.english": "Engleza",
+        "signUp.home":"Acasa",
+        "signUp.title": "Inregistrare",
+        "signUp.username": "Nume utilizator:",
+        "signUp.email": "Email:",
+        "signUp.password": "Parola",
+        "signUp.button":"Inregistrare",
+        "signUp.account":"Ai deja un cont?",
+        "signUp.account.logIn":"Logare",
+        "signIn.signIn": "Logare",
+        "signIn.signUp": "Inregistrare",
+        "signIn.logIn": "Logare",
+        "signIn.navScore": "Scor:",
+        "signIn.welcome": "Salut, ",
+        "signIn.language": "Limba",
+        "signIn.language.romanian": "Romana",
+        "signIn.language.english": "Engleza",
+        "signIn.home":"Acasa",
+        "signIn.title": "Logare",
+        "signIn.username": "Nume utilizator:",
+        "signIn.password": "Parola",
+        "signIn.button":"Logare",
+        "signIn.account":"Nu ai un cont?",
+        "signIn.account.signUp":"Inregistrare",
+        "quizcard.signIn": "Logare",
+        "quizcard.signOut": "Inregistrare",
+        "quizcard.logIn": "Logare",
+        "quizcard.navScore": "Scor:",
+        "quizcard.welcome": "Salut, ",
+        "quizcard.language": "Limba",
+        "quizcard.language.romanian": "Romana",
+        "quizcard.language.english": "Engleza",
+        "quizcard.home": "Acasa"
+    
+    }
