--- a/GeoQuiz/languages/en.json
+++ b/GeoQuiz/languages/en.json
@@ -8,6 +8,7 @@
     "mainPage.language.romanian": "Romanian",
     "mainPage.language.english": "English",
     "mainPage.h1.banner":"Learn while having FUN!",
+    "mainPage.logout": "Log Out",
     "mainPage.home":"Home",
     "mainPage.play": "Play",
     "mainPage.difficulty":"Choose difficulty:",
@@ -18,12 +19,14 @@
     "mainPage.discover.p":"Welcome to our geography gaming platform! Choose a game mode and get ready to explore the world!",
     "mainPage.presentation.easy":"Easy",
     "mainPage.presentation.medium":"Medium",
-    "mainPage.presentation.Hard":"Hard",
+    "mainPage.presentation.hard":"Hard",
     "mainPage.presentation.easy.p":"Explore the world in a relaxed manner, without too many challenges.",
     "mainPage.presentation.medium.p":"Test your geography knowledge in a more challenging environment.",
     "mainPage.presentation.hard.p":"Dare to explore the world in a challenging and captivating way.",
+    "mainPage.phone": "Phone: +1234567890",
     "signUp.signIn": "Sign In",
     "signIn.signUp": "Sign Up",
+    "signUp.signUp": "Sign Up",
     "signUp.signOut": "Sign Out",
     "signUp.logIn": "LogIn",
     "signUp.navScore": "Score:",
@@ -35,7 +38,7 @@
     "signUp.title": "Sign Up",
     "signUp.username": "Username:",
     "signUp.email": "Email:",
-    "signUp.password": "Password",
+    "signUp.password": "Password:",
     "signUp.button":"Sign Up",
     "signUp.account":"Already have an account?",
     "signUp.account.logIn":"LogIn",
@@ -50,10 +53,11 @@
     "signIn.home":"Home",
     "signIn.title": "Sign In",
     "signIn.username": "Username:",
-    "signIn.password": "Password",
+    "signIn.password": "Password:",
     "signIn.button":"LogIn",
     "signIn.account":"Don't have an account?",
     "signIn.account.signUp":"Sign Up",
+    "signIn.welcome.message":"Welcome to GeoQuiz! Be ready for an amazing experience!",
     "quizcard.signIn": "Sign In",
     "quizcard.signOut": "Sign Out",
     "quizcard.logIn": "LogIn",
@@ -62,5 +66,10 @@
     "quizcard.language": "Language",
     "quizcard.language.romanian": "Romanian",
     "quizcard.language.english": "English",
-    "quizcard.home": "Home"
+    "quizcard.home": "Home",
+    "quizCard.logout": "Log Out",
+    "quizcard.submit": "Submit",
+    "quizcard.score": "Score: 0"
+
+
 }
