--- a/GeoQuiz/languages/en.json
+++ b/GeoQuiz/languages/en.json
@@ -3,7 +3,7 @@
     "mainPage.signUp": "Sign Up",
     "mainPage.logIn": "LogIn",
     "mainPage.navScore": "Score:",
-    "mainPage.welcome": "Welcome, ",
+    "mainPage.welcome": "Hello,",
     "mainPage.language": "Language",
     "mainPage.language.romanian": "Romanian",
     "mainPage.language.english": "English",
@@ -30,7 +30,7 @@
     "signUp.signOut": "Sign Out",
     "signUp.logIn": "LogIn",
     "signUp.navScore": "Score:",
-    "signUp.welcome": "Welcome, ",
+    "signUp.welcome": "Hello,",
     "signUp.language": "Language",
     "signUp.language.romanian": "Romanian",
     "signUp.language.english": "English",
@@ -46,7 +46,7 @@
     "signIn.signOut": "Sign Out",
     "signIn.logIn": "LogIn",
     "signIn.navScore": "Score:",
-    "signIn.welcome": "Welcome, ",
+    "signIn.welcome": "Hello, ",
     "signIn.language": "Language",
     "signIn.language.romanian": "Romanian",
     "signIn.language.english": "English",
@@ -62,7 +62,7 @@
     "quizcard.signOut": "Sign Out",
     "quizcard.logIn": "LogIn",
     "quizcard.navScore": "Score:",
-    "quizcard.welcome": "Welcome, ",
+    "quizcard.welcome": "Hello,",
     "quizcard.language": "Language",
     "quizcard.language.romanian": "Romanian",
     "quizcard.language.english": "English",
